src/components/Navbar/index.scss
$blueish: #44FFFF;
$nflblue: #00316b;
$nflred: #d20000;

.navbar-buttons {
  color: white;
}

.navbar-register {
  margin-top: 20px;
  margin-right: 5px;
}

.navbar-login {
  margin-top: 20px;
}

.navbar-logout {
  margin-top: 20px;
}

.navbar {
  padding-bottom: 10px;
  margin-bottom: 0;
  background: #f0f0f0;

  a {
    color: white;
    font-family: 'Oswald', sans-serif;
    text-decoration: none;
  }

  a:hover {
    text-decoration: none;
    color: $nflred;
  }
}

.btn:focus {
  color: #white !important;
}

.navbar-logo {
  margin-top: 2px;
}

.subtitle {
  font-size: 20px;
  margin-left: 20px;
  font-family: helvetica;
}

